= RELEASE HISTORY

== 1.3.0 / 2010-11-17

Version 1.3 primarily makes a few adjustment under-the-hood. It switches
GetoptLong out for OptionParser, gets rid of it's dependency on Ruby Facets'
Kernel#ask method, and changes the diff comment short name from `-d` to `-D`.
Lowecase, `-d` is now used as a short name for the `--dir` option. In the
process a bug was fixed where this `-d` option was not being added to the
manifest's bang line.

Changes:

* Use `optparse.rb` library instead of `getoptlong.rb`.
* Remove dependency on Ruby Facets's Kernel#ask method.
* Rename `-d` to `-D`, short for `--diff`.
* Add `-d` option to go with `--dir`.
* Fix issue with `-d` option not added to bang line.


== 1.2.0 / 2010-02-19

This release adjusts the plugins directory to conform
to the new Plugin gem and add the -i shortcut to the 
command-line help.

Changes:

* Rename lib/plugin to lib/plugins.
* Add -i to help output.


== 1.1.0 / 2009-10-24

This release fixes the show and clean commands and makes
some additional adjustments under the hood.

Changes:

* Fix clean and show commands.
* Change to MIT license.


== 1.0.0 / 2009-07-02

This is the initial release of Mast.

Changes:

* Happy Birthday!
